assets/sass/_markdown.scss
.markdown-body {
	// Fixes
	color: var(--text);
	&.fix-inline > p {
		display: inline;
	}
	& > ul, & > ol {
        margin-top: 0;
		//margin-left: 1rem;
	}
    // Fix ol margin-top
    ul ol {
        margin-top: 0.5rem;
    }

	// Html
    // --
	pre, code {
		@include defaultFontFace;
		font-size: 14px;
		max-height: 500px;
		border-radius: 5px;

		color: currentColor;
		background-color: var(--code-color) !important;
	}
	a {
		color: var(--link2) !important;
		text-decoration: none !important;
	}
	a:hover {
		text-decoration: underline !important;
	}
	a:visited {
		color: var(--info-light);
	}
	blockquote {
		padding-top: 0.5rem;
		padding-bottom: 0.5rem;
		padding-left: 15px;
		padding-right: 0;
		background: inherit;
		font-weight: 600;
		border-color: var(--is-discrete);
		//filter: invert(25%);
	}
	li input[type="checkbox"] {
		margin-right: 8px;
		//accent-color: #00eaff; very recent version !

		// Pseudo ing element
		width: 15px;
		height: 15px;
		//cursor: pointer;

        &:not(:checked) {
            opacity: 0.75;
        }
	}
	li p {
		// checkbox are defined before <p> (dillonkeans,)
		display: inline;
	}
	strong {
		font-weight: 700;
	}
    em {
        font-style: italic !important;
    }
	.table-container {
		overflow: auto !important;
	}
	table {
		width: auto !important;
		border: 1px solid var(--border-color) !important;
		max-height: 500px;

		thead tr:last-child {
			//border-bottom-style: double !important;
		}
		tr:nth-child(even){
			background-color: var(--chbc) !important;
		}
		th {
			border: 1px solid var(--border-color) !important;

		}
		td {
			border: 1px solid var(--border-color) !important;
		}
	}
}

// Fix colors,
// -  background of box is equal of $code-color.
.box {
    .markdown-body {
        pre, code {
            background-color: var(--code-color-light) !important;
        }

        hr {
            background-color: var(--code-color-light) !important;
        }
    }
}

// Fix highlight color in human mardown
.markdown-body.is-human {
	strong {
		color: var(--is-highlight);
    }

    em {
        font-variation-settings: initial !important;
    }
}

